<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transprant_color"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="7dp"
        android:paddingBottom="15dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Crossimage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/gray_cross_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_popup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popuptitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/st_mapnotification_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/cl_popup" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/map_notificationbg"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:padding="1dp">

                <TextView
                    android:id="@+id/tvmilescount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="1dp"
                    android:singleLine="true"
                    android:text="@string/st_count"
                   android:textSize="40sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvmiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvmilescount"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.9"
                    android:singleLine="true"
                    android:text="@string/st_miles"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_popupsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/st_checkout_subtext"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:background="@color/transprant_color"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transprant_color"
                    android:layout_marginTop="17dp"
                   android:layout_marginBottom="15dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_mintitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/st_min"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/cl_popupsubtextcolor" />
                    <TextView
                        android:id="@+id/tv_maxtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/st_max"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/cl_popupsubtextcolor" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="38dp"
                        android:background="@color/transprant_color">
                        <TextView
                            android:id="@+id/tv_1miletitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/st_1miles"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/cl_popupsubtextcolor" />
                        <TextView
                            android:id="@+id/tv_50miletitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginEnd="15dp"
                            android:text="@string/st_50miles"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/cl_popupsubtextcolor" />
                    </RelativeLayout>
                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/CustomProgressBarHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="1dp"
                        android:max="50"
                        android:layout_marginBottom="1dp"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>