<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.zaparound.LandingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:src="@drawable/landing_bg" />

    <ImageView
        android:id="@+id/iv_LOGOIMAGE"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_LOGOIMAGE"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:clickable="false"
        android:visibility="gone"
        android:text="@string/st_appname"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_logintitle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/iv_LOGOIMAGE"
        android:src="@drawable/zaparound_text" />

    <LinearLayout
        android:id="@+id/ll_Buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/left_rounded_backround">

            <Button
                android:id="@+id/bt_Loginbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:onClick="Login"
                android:text="@string/st_btnlogin"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:contentDescription="@string/app_name"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right_rounded_backround">

            <Button
                android:id="@+id/bt_Signupbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="Login"
                android:text="@string/st_btnsignup"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
