<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transprant_color"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="7dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Crossimage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/gray_cross_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_popup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_middleimage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/update_icon" />

            <TextView
                android:id="@+id/tv_popuptitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/st_update_avilable"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/st_checkintextcolor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_popupsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="7dp"
                android:gravity="center"
                android:text="@string/st_update_app2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/cl_popup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/cl_clear"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_no"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:text="@string/st_later"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/cl_zap">

                    <Button
                        android:id="@+id/btn_yes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/st_update"
                        android:clickable="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>