<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transprant_color"
    android:paddingBottom="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/transprant_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_Crossimage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/app_name"
                    android:padding="20dp"
                    android:src="@drawable/gray_cross_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_popup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_middleimage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/support_icon" />

                <TextView
                    android:id="@+id/tv_popuptitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/st_support"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/st_checkintextcolor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_supportmessage"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/support_edittext_bg"
                    android:gravity="left|top"
                    android:hint="@string/st_supporthint"
                    android:inputType="textMultiLine"
                    android:textColor="@color/cl_popup"
                    android:textColorHint="@color/cl_popup"
                    android:textCursorDrawable="@null" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/transprant_color"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:background="@color/snackbar_background">

                        <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:text="@string/st_submit"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>